Лендинг зеркал смарт - адаптив

--- a/source/mirrors-smart.html
+++ b/source/mirrors-smart.html
@@ -36,8 +36,8 @@
           </div>
         </div>
       </div>
-      <div class="container mt-30p">
-        <ul class="list-unstyled row align-items-center justify-content-center">
+      <div class="container mt-md-30p mt-3">
+        <ul class="mirrors-smart-intro__icons list-unstyled row row-16 align-items-center justify-content-center">
           <li class="col-auto"><img src="//liberta.ua/img/xsmart-main-bg-option-1.png.pagespeed.ic._yn6YBNa-0.png" alt="" class="img-fluid"></li>
           <li class="col-auto"><img src="//liberta.ua/img/smart-main-bg-option-2.png" alt="" class="img-fluid"></li>
           <li class="col-auto"><img src="//liberta.ua/img/smart-main-bg-option-3.png" alt="" class="img-fluid"></li>
@@ -47,7 +47,7 @@
       </div>
     </section>
 
-    <section class="mirrors-smart-advantages">
+    <section class="mirrors-smart-advantages py-xl-60p py-40p">
       <div class="container">
         <h2 class="sr-only">Преимущества</h2>
         <div class="row mirrors-smart-advantages__descr">
@@ -55,25 +55,25 @@
             <p>Перед вами SMART MIRROR — ультрасовременное интеллектуальное зеркало с точностью компьютера и многозадачностью цифрового гаджета под управление ОС Android 6.0. Стильный аксессуар и мощная технология для современного дома, в котором все на своих местах.</p>
           </div>
         </div>
-        <div class="row mt-40p">
-          <div class="col-3 mirrors-smart-advantages__item">
+        <div class="row mt-xl-40p mt-20p mb-n20p mb-md-0">
+          <div class="col-md-3 mirrors-smart-advantages__item mb-20p mb-md-0">
             <img src="//liberta.ua/img/smart-advantages-1.png" alt="">
-            <h4 class="mirrors-smart-advantages__item-title mt-2">Сенсорное управление</h4>
+            <h3 class="mirrors-smart-advantages__item-title mt-2">Сенсорное управление</h3>
             <p class="mb-0">Мультитач поверхность экрана для удобного моментального управления всеми функциями</p>
           </div>
-          <div class="col-3 mirrors-smart-advantages__item">
+          <div class="col-md-3 mirrors-smart-advantages__item mb-20p mb-md-0">
             <img src="//liberta.ua/img/smart-advantages-2.png" alt="">
-            <h4 class="mirrors-smart-advantages__item-title mt-2">Личный тренер и косметолог</h4>
+            <h3 class="mirrors-smart-advantages__item-title mt-2">Личный тренер и косметолог</h3>
             <p class="mb-0">Контроль здоровья, веса, состояния кожи в отдельном аккаунте каждого члена семьи</p>
           </div>
-          <div class="col-3 mirrors-smart-advantages__item">
+          <div class="col-md-3 mirrors-smart-advantages__item mb-20p mb-md-0">
             <img src="//liberta.ua/img/smart-advantages-3.png" alt="">
-            <h4 class="mirrors-smart-advantages__item-title mt-2">Все мессенджеры и соцсети</h4>
+            <h3 class="mirrors-smart-advantages__item-title mt-2">Все мессенджеры и соцсети</h3>
             <p class="mb-0">Вы не пропустите ни один звонок или важное сообщение</p>
           </div>
-          <div class="col-3 mirrors-smart-advantages__item">
+          <div class="col-md-3 mirrors-smart-advantages__item mb-20p mb-md-0">
             <img src="//liberta.ua/img/smart-advantages-4.png" alt="">
-            <h4 class="mirrors-smart-advantages__item-title mt-2">Управление голосом</h4>
+            <h3 class="mirrors-smart-advantages__item-title mt-2">Управление голосом</h3>
             <p class="mb-0">Отдавайте голосовые команды без прикосновения к Умному зеркалу</p>
           </div>
         </div>
@@ -214,36 +214,36 @@
       <div class="section-parallax__bg"></div>
     </section>
 
-    <section id="products" class="bg-black text-white pt-60p pb-40p">
+    <section id="products" class="smart-category__products bg-black text-white pt-xl-60p pt-40p pb-40p">
       <div class="container">
-        <h2 class="h1 text-center mb-40p">Выберите SMART MIRROR</h2>
+        <h2 class="smart-category__products-title text-center mb-xl-40p mb-4">Выберите SMART MIRROR</h2>
         <div class="row row-16 mb-n3">
           <div class="col-md-4 mb-3">
             <div class="product-card">
               <img class="product-card__img" src="//liberta.ua/img/smart-800_600-23.png" alt="">
-              <a href="/smart-800x600" class="product-card__name stretched-link mt-30p">SMART MIRROR 800х600 / 23.6”</a>
-              <div class="mt-10p">44 890 грн.</div>
+              <a href="/smart-800x600" class="product-card__name stretched-link mt-xl-30p mt-2">SMART MIRROR 800х600 / 23.6”</a>
+              <div class="mt-xl-10p">44 890 грн.</div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="product-card">
               <img class="product-card__img" src="//liberta.ua/img/smart-1000_700.png" alt="">
-              <a href="/smart-1000x700" class="product-card__name stretched-link mt-30p">SMART MIRROR 1000х700 / 23.6”</a>
-              <div class="mt-10p">53 890 грн.</div>
+              <a href="/smart-1000x700" class="product-card__name stretched-link mt-xl-30p mt-2">SMART MIRROR 1000х700 / 23.6”</a>
+              <div class="mt-xl-10p">53 890 грн.</div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="product-card">
               <img class="product-card__img" src="//liberta.ua/img/smart-1200_800.png" alt="">
-              <a href="/smart-1200x800" class="product-card__name stretched-link mt-30p">SMART MIRROR 1200х800 / 43.0”</a>
-              <div class="mt-10p">121 690 грн.</div>
+              <a href="/smart-1200x800" class="product-card__name stretched-link mt-xl-30p mt-2">SMART MIRROR 1200х800 / 43.0”</a>
+              <div class="mt-xl-10p">121 690 грн.</div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="product-card">
               <img class="product-card__img" src="//liberta.ua/img/smart-600_800-21.png" alt="">
-              <a href="/smart-600x800" class="product-card__name stretched-link mt-30p">SMART MIRROR 600х800 / 21.5”</a>
-              <div class="mt-10p">43 290 грн.</div>
+              <a href="/smart-600x800" class="product-card__name stretched-link mt-xl-30p mt-2">SMART MIRROR 600х800 / 21.5”</a>
+              <div class="mt-xl-10p">43 290 грн.</div>
             </div>
           </div>
         </div>
