--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <a href="service-center.html" class="list-group-item list-group-item-action">Сервисный центр</a>
       <a href="blog.html" class="list-group-item list-group-item-action">Блог</a>
       <a href="post.html" class="list-group-item list-group-item-action">Пост</a>
+      <a href="showrooms.html" class="list-group-item list-group-item-action">Адреса шоурумов</a>
+      <a href="dnepr.html" class="list-group-item list-group-item-action">Шоурум в городе</a>
+      <a href="mirrors-smart.html" class="list-group-item list-group-item-action">Лендинг зеркал смарт</a>
     </div>
   </div>
 
