--- a/source/mirrors.html
+++ b/source/mirrors.html
@@ -168,6 +168,53 @@
           </div>
         </div>
 
+        <div class="row row-16 mb-n3 mt-30p">
+          <div class="col-md-3 mb-3">
+            <div class="product-card dark">
+              <div class="product-card__info">
+                <img class="product-card__img" src="//liberta.ua/uploads/basicImage/270x240/xDIANO,P20cover_1583316355.jpg.pagespeed.ic.epfmmSuYXb.webp" alt="DIANO">
+                <a href="/smart-800x600" class="product-card__name stretched-link mt-xl-30p mt-2">DIANO</a>
+                <div class="mt-xl-10p"><span class="text-muted">От</span> 8 518 грн.</div>
+              </div>
+              <div class="product-card__full fs-12 ">
+                <div class="text-muted">Доступные <br>опции:</div>
+                <ul class="product-card__options list-unstyled mt-2 mb-0">
+                  <li class="product-card__option light_outside">
+                    <span class="product-card__option-icon"></span>
+                    <span class="product-card__option-title">Подсветка на стену</span>
+                  </li>
+                  <li class="product-card__option linse">
+                    <span class="product-card__option-icon"></span>
+                    <span class="product-card__option-title">Линза х5</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <div class="product-card">
+              <div class="product-card__info">
+                <img class="product-card__img" src="//liberta.ua/uploads/basicImage/270x240/xDIANO,P20cover_1583316355.jpg.pagespeed.ic.epfmmSuYXb.webp" alt="DIANO">
+                <a href="/smart-800x600" class="product-card__name stretched-link mt-xl-30p mt-2">DIANO</a>
+                <div class="mt-xl-10p"><span class="text-muted">От</span> 8 518 грн.</div>
+              </div>
+              <div class="product-card__full fs-12 ">
+                <div class="text-muted">Доступные <br>опции:</div>
+                <ul class="product-card__options list-unstyled mt-2 mb-0">
+                  <li class="product-card__option light_outside">
+                    <span class="product-card__option-icon"></span>
+                    <span class="product-card__option-title">Подсветка на стену</span>
+                  </li>
+                  <li class="product-card__option linse">
+                    <span class="product-card__option-icon"></span>
+                    <span class="product-card__option-title">Линза х5</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <nav aria-label="Page navigation" class="mt-30p">
           <ul class="pagination justify-content-center">
             <li class="page-item active" aria-current="page"><span class="page-link">1</span></li>
