--- a/source/mirrors-smart.html
+++ b/source/mirrors-smart.html
@@ -219,38 +219,46 @@
         <h2 class="smart-category__products-title text-center mb-xl-40p mb-4">Выберите SMART MIRROR</h2>
         <div class="row row-16 mb-n3">
           <div class="col-md-4 mb-3">
-            <div class="product-card dark">
+            <div class="product-card product-card--dark">
               <div class="product-card__info">
-                <img class="product-card__img" src="//liberta.ua/img/smart-800_600-23.png" alt="">
-                <a href="/smart-800x600" class="product-card__name stretched-link mt-xl-30p mt-2">SMART MIRROR 800х600 / 23.6”</a>
-                <div class="mt-xl-10p">44 890 грн.</div>
+                <div class="product-card__img-wrap">
+                  <img class="product-card__img" src="//liberta.ua/img/smart-800_600-23.png" alt="">
+                </div>
+                <a href="/smart-800x600" class="product-card__name stretched-link">SMART MIRROR 800х600 / 23.6”</a>
+                <div>44 890 грн.</div>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="product-card dark">
+            <div class="product-card product-card--dark">
               <div class="product-card__info">
-                <img class="product-card__img" src="//liberta.ua/img/smart-1000_700.png" alt="">
-                <a href="/smart-1000x700" class="product-card__name stretched-link mt-xl-30p mt-2">SMART MIRROR 1000х700 / 23.6”</a>
-                <div class="mt-xl-10p">53 890 грн.</div>
+                <div class="product-card__img-wrap">
+                  <img class="product-card__img" src="//liberta.ua/img/smart-1000_700.png" alt="">
+                </div>
+                <a href="/smart-1000x700" class="product-card__name stretched-link">SMART MIRROR 1000х700 / 23.6”</a>
+                <div>53 890 грн.</div>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="product-card dark">
+            <div class="product-card product-card--dark">
               <div class="product-card__info">
-                <img class="product-card__img" src="//liberta.ua/img/smart-1200_800.png" alt="">
-                <a href="/smart-1200x800" class="product-card__name stretched-link mt-xl-30p mt-2">SMART MIRROR 1200х800 / 43.0”</a>
-                <div class="mt-xl-10p">121 690 грн.</div>
+                <div class="product-card__img-wrap">
+                  <img class="product-card__img" src="//liberta.ua/img/smart-1200_800.png" alt="">
+                </div>
+                <a href="/smart-1200x800" class="product-card__name stretched-link">SMART MIRROR 1200х800 / 43.0”</a>
+                <div>121 690 грн.</div>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="product-card dark">
+            <div class="product-card product-card--dark">
               <div class="product-card__info">
-                <img class="product-card__img" src="//liberta.ua/img/smart-600_800-21.png" alt="">
+                <div class="product-card__img-wrap">
+                  <img class="product-card__img" src="//liberta.ua/img/smart-600_800-21.png" alt="">
+                </div>
                 <a href="/smart-600x800" class="product-card__name stretched-link mt-xl-30p mt-2">SMART MIRROR 600х800 / 21.5”</a>
-                <div class="mt-xl-10p">43 290 грн.</div>
+                <div>43 290 грн.</div>
               </div>
             </div>
           </div>
