--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <a href="showrooms.html" class="list-group-item list-group-item-action">Адреса шоурумов</a>
       <a href="dnepr.html" class="list-group-item list-group-item-action">Шоурум в городе</a>
       <a href="mirrors-smart.html" class="list-group-item list-group-item-action">Лендинг зеркал смарт</a>
+      <a href="mirrors.html" class="list-group-item list-group-item-action">Категория товара</a>
     </div>
   </div>
 
